--- a/app/templates/_index.html
+++ b/app/templates/_index.html
@@ -1,18 +1,17 @@
 {% extends 'base.html' %}
 
 {% block body %}
-  <nav class="light-blue lighten-1" role="navigation">
-    <div class="container">
-      <div class="nav-wrapper"><a id="logo-container" href="#" class="brand-logo">Logo</a>
-        <ul class="right">
-          <li><a href="#">Navbar Link</a></li>
-        </ul>
 
-        <ul id="nav-mobile" class="side-nav">
-          <li><a href="#">Navbar Link</a></li>
-        </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-      </div>
+  <nav class="light-blue lighten-1" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+      <ul class="right">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="side-nav">
+        <li><a href="#">Navbar Link</a></li>
+      </ul>
+      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     </div>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
@@ -107,4 +106,5 @@
       </div>
     </div>
   </footer>
+
 {% endblock %}
